--- a/Identicons/Identicons/MainWindow.xaml
+++ b/Identicons/Identicons/MainWindow.xaml
@@ -17,19 +17,19 @@
         </Grid.RowDefinitions>
 
         <UniformGrid Grid.Row="0" Rows="2" Columns="1">
-        <Label Content="Username:" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0, 10"/>
+        <Label Content="Username:" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0, 10" FontWeight="Bold"/>
         <TextBox x:Name="UserNameTextBox" Grid.Row="0" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120" TextChanged="UserNameTextBox_TextChanged"/>
         </UniformGrid>
         
         <UniformGrid Grid.Row="1" Rows="2" Columns="4" HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <Label Content="Size:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Label Content="Salt:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Label Content="Rounds:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Label Content="Quality:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Content="Size:" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Label Content="Salt:" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Label Content="Rounds:" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Label Content="Quality:" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
             <TextBox x:Name="SizeTextBox" Height="23" TextWrapping="Wrap" Text="6" Width="120" TextChanged="SizeTextBox_TextChanged" Margin="20, 0"/>
             <TextBox x:Name="SaltTextBox" Height="23" TextWrapping="Wrap" Text="" Width="120" TextChanged="SaltTextBox_TextChanged" Margin="20, 0"/>
             <TextBox x:Name="RoundsTextBox" Height="23" TextWrapping="Wrap" Text="0" Width="120" TextChanged="RoundsTextBox_TextChanged" Margin="20, 0"/>
-            <TextBox x:Name="QualityTextBox" Height="23" TextWrapping="Wrap" Text="512" Width="120" TextChanged="QualityTextBox_TextChanged" Margin="20, 0"/>
+            <TextBox x:Name="QualityTextBox" Height="23" TextWrapping="Wrap" Text="600" Width="120" TextChanged="QualityTextBox_TextChanged" Margin="20, 0"/>
         </UniformGrid>
 
         <UniformGrid Grid.Row="2" Rows="1" Columns="3" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="0, 10">
